add new model file & update visualisations

--- a/crypto/copy/RNN_Prediction_Technical.ipynb
+++ b/crypto/copy/RNN_Prediction_Technical.ipynb
@@ -739,7 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_trades_df.to_csv(\"returns.csv\")"
+    "# all_trades_df.to_csv(\"returns.csv\")"
    ]
   },
   {
