add validation period

--- a/crypto/copy/visualization.ipynb
+++ b/crypto/copy/visualization.ipynb
@@ -532,13 +532,13 @@
     "sentiment['Date'] = sentiment['Date'].dt.normalize()\n",
     "sentiment['Date'] = sentiment['Date'].dt.tz_localize(None)\n",
     "\n",
-    "# Prepare crypto data date column\n",
+    "# Prepare stock data date column\n",
     "df['Date'] = df['Date'].dt.normalize()\n",
     "df['Date'] = df['Date'].dt.tz_localize(None)\n",
     "\n",
     "# Merge daily sentiment into intraday stock data\n",
     "df = pd.merge(df, sentiment, how='left', on=['Date', 'Coin'])\n",
-    "\n",
+    "df.drop(columns='Date', inplace=True)\n",
     "\n",
     "# Fill any missing sentiment values with neutral (0)\n",
     "df['Sentiment'] = df['Sentiment'].fillna(0)"
