update token to ticker

--- a/crypto/improved_model.ipynb
+++ b/crypto/improved_model.ipynb
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2344,17 +2344,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_trades_val_df['Rolling_Risk'] = all_trades_val_df.groupby('Token')['Actual_Return'].transform(lambda x: x.rolling(window=10).std())\n",
-    "all_trades_val_df['Rolling_Average'] = all_trades_val_df.groupby('Token')['Actual_Return'].transform(lambda x: x.rolling(window=10).mean())\n"
+    "all_trades_val_df['Rolling_Average'] = all_trades_val_df.groupby('Token')['Actual_Return'].transform(lambda x: x.rolling(window=10).mean())\n",
+    "all_trades_val_df = all_trades_val_df.rename(columns={'Token': 'Ticker'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Stock_Close_Price</th>\n",
+       "      <th>Predicted_Return</th>\n",
+       "      <th>Actual_Return</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Cumulative_Return</th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Rolling_Risk</th>\n",
+       "      <th>Rolling_Average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-03-01 00:47:00</td>\n",
+       "      <td>84171.7000</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>-0.001042</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>-0.001042</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-03-01 00:48:00</td>\n",
+       "      <td>84084.0100</td>\n",
+       "      <td>0.000036</td>\n",
+       "      <td>-0.000410</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>-0.001451</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-03-01 00:49:00</td>\n",
+       "      <td>84049.5300</td>\n",
+       "      <td>0.000038</td>\n",
+       "      <td>0.000084</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>-0.001367</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-03-01 00:50:00</td>\n",
+       "      <td>84056.6000</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>-0.001631</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>-0.002996</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-03-01 00:51:00</td>\n",
+       "      <td>83919.4900</td>\n",
+       "      <td>0.000036</td>\n",
+       "      <td>-0.000054</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>-0.003050</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138051</th>\n",
+       "      <td>2025-03-24 23:56:00</td>\n",
+       "      <td>2.4481</td>\n",
+       "      <td>0.000105</td>\n",
+       "      <td>0.000041</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>0.133310</td>\n",
+       "      <td>XRP</td>\n",
+       "      <td>0.000619</td>\n",
+       "      <td>0.000147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138052</th>\n",
+       "      <td>2025-03-24 23:57:00</td>\n",
+       "      <td>2.4482</td>\n",
+       "      <td>0.000103</td>\n",
+       "      <td>0.001062</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>0.134514</td>\n",
+       "      <td>XRP</td>\n",
+       "      <td>0.000656</td>\n",
+       "      <td>0.000286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138053</th>\n",
+       "      <td>2025-03-24 23:58:00</td>\n",
+       "      <td>2.4508</td>\n",
+       "      <td>0.000103</td>\n",
+       "      <td>-0.000286</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>0.134190</td>\n",
+       "      <td>XRP</td>\n",
+       "      <td>0.000680</td>\n",
+       "      <td>0.000229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138054</th>\n",
+       "      <td>2025-03-24 23:59:00</td>\n",
+       "      <td>2.4501</td>\n",
+       "      <td>0.000101</td>\n",
+       "      <td>-0.001265</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>0.132755</td>\n",
+       "      <td>XRP</td>\n",
+       "      <td>0.000820</td>\n",
+       "      <td>0.000058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138055</th>\n",
+       "      <td>2025-03-25 00:00:00</td>\n",
+       "      <td>2.4470</td>\n",
+       "      <td>0.000103</td>\n",
+       "      <td>0.000613</td>\n",
+       "      <td>LONG</td>\n",
+       "      <td>0.133449</td>\n",
+       "      <td>XRP</td>\n",
+       "      <td>0.000838</td>\n",
+       "      <td>0.000119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>138056 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Date  Stock_Close_Price  Predicted_Return  \\\n",
+       "0      2025-03-01 00:47:00         84171.7000          0.000037   \n",
+       "1      2025-03-01 00:48:00         84084.0100          0.000036   \n",
+       "2      2025-03-01 00:49:00         84049.5300          0.000038   \n",
+       "3      2025-03-01 00:50:00         84056.6000          0.000034   \n",
+       "4      2025-03-01 00:51:00         83919.4900          0.000036   \n",
+       "...                    ...                ...               ...   \n",
+       "138051 2025-03-24 23:56:00             2.4481          0.000105   \n",
+       "138052 2025-03-24 23:57:00             2.4482          0.000103   \n",
+       "138053 2025-03-24 23:58:00             2.4508          0.000103   \n",
+       "138054 2025-03-24 23:59:00             2.4501          0.000101   \n",
+       "138055 2025-03-25 00:00:00             2.4470          0.000103   \n",
+       "\n",
+       "        Actual_Return Position  Cumulative_Return Ticker  Rolling_Risk  \\\n",
+       "0           -0.001042     LONG          -0.001042    BTC           NaN   \n",
+       "1           -0.000410     LONG          -0.001451    BTC           NaN   \n",
+       "2            0.000084     LONG          -0.001367    BTC           NaN   \n",
+       "3           -0.001631     LONG          -0.002996    BTC           NaN   \n",
+       "4           -0.000054     LONG          -0.003050    BTC           NaN   \n",
+       "...               ...      ...                ...    ...           ...   \n",
+       "138051       0.000041     LONG           0.133310    XRP      0.000619   \n",
+       "138052       0.001062     LONG           0.134514    XRP      0.000656   \n",
+       "138053      -0.000286     LONG           0.134190    XRP      0.000680   \n",
+       "138054      -0.001265     LONG           0.132755    XRP      0.000820   \n",
+       "138055       0.000613     LONG           0.133449    XRP      0.000838   \n",
+       "\n",
+       "        Rolling_Average  \n",
+       "0                   NaN  \n",
+       "1                   NaN  \n",
+       "2                   NaN  \n",
+       "3                   NaN  \n",
+       "4                   NaN  \n",
+       "...                 ...  \n",
+       "138051         0.000147  \n",
+       "138052         0.000286  \n",
+       "138053         0.000229  \n",
+       "138054         0.000058  \n",
+       "138055         0.000119  \n",
+       "\n",
+       "[138056 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_trades_val_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
