--- a/crypto/improved_model.ipynb
+++ b/crypto/improved_model.ipynb
@@ -2649,6 +2649,87 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/y4/lw6k9pr97v32ftq68tmqp5w00000gn/T/ipykernel_20226/1448076956.py:36: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  trade_metrics['trade_return'] = df.groupby('Trade_ID').apply(calc_trade_return).values\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'num_trades': 9633,\n",
+       " 'avg_holding_period_minutes': np.float64(13.33156856638638),\n",
+       " 'avg_profit_per_trade': np.float64(0.0001275354398426541)}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_trade_metrics(df):\n",
+    "    \"\"\"\n",
+    "    Calculate trade statistics from a DataFrame containing trading data.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pandas.DataFrame): The DataFrame containing the trading data. It must include \n",
+    "                                the columns 'Date', 'Actual_Return', and 'Position'.\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: A dictionary containing the number of trades, average holding period (in minutes),\n",
+    "                and average profit per trade.\n",
+    "    \"\"\"\n",
+    "    # Ensure 'Date' column is in datetime format\n",
+    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "    \n",
+    "    # Identify trades by detecting changes in 'Position'\n",
+    "    df['Trade_ID'] = (df['Position'] != df['Position'].shift(1)).cumsum()\n",
+    "    \n",
+    "    # Function to compute the trade return based on the trade's position.\n",
+    "    def calc_trade_return(group):\n",
+    "        pos = group['Position'].iloc[0].upper()\n",
+    "        if pos == \"LONG\":\n",
+    "            return np.prod(1 + group['Actual_Return']) - 1\n",
+    "        elif pos == \"SHORT\":\n",
+    "            return np.prod(1 - group['Actual_Return']) - 1\n",
+    "        else:\n",
+    "            return np.nan\n",
+    "\n",
+    "    # Compute trade-level metrics: start and end times, and the trade's return.\n",
+    "    trade_metrics = df.groupby('Trade_ID').agg(\n",
+    "        start_date=('Date', 'first'),\n",
+    "        end_date=('Date', 'last'),\n",
+    "        position=('Position', 'first')\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    trade_metrics['trade_return'] = df.groupby('Trade_ID').apply(calc_trade_return).values\n",
+    "    trade_metrics['holding_period_minutes'] = (\n",
+    "        (trade_metrics['end_date'] - trade_metrics['start_date']).dt.total_seconds() / 60\n",
+    "    )\n",
+    "    \n",
+    "    # Calculate overall metrics\n",
+    "    num_trades = trade_metrics.shape[0]\n",
+    "    avg_holding_period = trade_metrics['holding_period_minutes'].mean()\n",
+    "    avg_profit_per_trade = trade_metrics['trade_return'].mean()\n",
+    "\n",
+    "    return {\n",
+    "        'num_trades': num_trades,\n",
+    "        'avg_holding_period_minutes': avg_holding_period,\n",
+    "        'avg_profit_per_trade': avg_profit_per_trade\n",
+    "    }\n",
+    "\n",
+    "calculate_trade_metrics(all_trades_val_df)"
+   ]
   }
  ],
  "metadata": {
