edit variable names

--- a/crypto/improved_model.ipynb
+++ b/crypto/improved_model.ipynb
@@ -206,7 +206,7 @@
     "    cumulative_return = np.cumprod(1 + (actual_returns * (np.array(positions) == 'LONG') - actual_returns * (np.array(positions) == 'SHORT'))) - 1\n",
     "    trades = pd.DataFrame({\n",
     "        'Date': dates,\n",
-    "        'Ticker_Close_Price': close_prices,\n",
+    "        'Close_Price': close_prices,\n",
     "        'Predicted_Return': predicted_returns.flatten(),\n",
     "        'Actual_Return': actual_returns,\n",
     "        'Position': positions,\n",
@@ -705,7 +705,7 @@
     "\n",
     "    trades = pd.DataFrame({\n",
     "        'Date': dates,\n",
-    "        'Ticker_Close_Price': close_prices,\n",
+    "        'Close_Price': close_prices,\n",
     "        'Predicted_Return': predicted_returns.flatten(),\n",
     "        'Actual_Return': actual_returns,\n",
     "        'Position': positions,\n",
@@ -1924,7 +1924,7 @@
     "\n",
     "    trades = pd.DataFrame({\n",
     "        'Date': dates,\n",
-    "        'Ticker_Close_Price': close_prices,\n",
+    "        'Close_Price': close_prices,\n",
     "        'Predicted_Return': predicted_returns.flatten(),\n",
     "        'Actual_Return': actual_returns,\n",
     "        'Position': positions,\n",
@@ -2694,7 +2694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_trades_val_df.to_csv(\"returns.csv\")"
+    "all_trades_val_df.to_csv(\"returns.csv\", index=False)"
    ]
   },
   {
