--- a/portfolio/combine_stats.ipynb
+++ b/portfolio/combine_stats.ipynb
@@ -33,8 +33,8 @@
    "id": "input_stats",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-04T08:16:48.812872Z",
-     "start_time": "2025-04-04T08:16:48.803229Z"
+     "end_time": "2025-04-04T08:47:30.032966Z",
+     "start_time": "2025-04-04T08:47:30.022472Z"
     }
    },
    "source": [
@@ -76,7 +76,52 @@
     "print('Combined Final Portfolio Value:', combined_final_value)\n",
     "print('Combined Annualized Sharpe Ratio:', combined_sharpe)\n",
     "print('Combined Maximum Drawdown:', combined_drawdown)\n",
-    "print('Combined Win Rate (%):', combined_win_rate)\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# --- Input: Summary statistics for each period ---\n",
+    "data = {\n",
+    "    'Period': ['Period 1', 'Period 2', 'Period 3', 'Period 4'],\n",
+    "    'Final Portfolio Value': [1.0405, 1.0519, 1.0324, 1.0179],\n",
+    "    'Annualized Sharpe': [3.8331, 4.6799, 3.1739, 1.9996],\n",
+    "    'Max Drawdown': [-6.76, -3.73, -8.03, -7.39],\n",
+    "    'Win Rate': [53.01, 51.53, 51.34, 49.65]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print('Input Period Statistics:')\n",
+    "print(df)\n",
+    "\n",
+    "# --- Aggregating the Statistics ---\n",
+    "\n",
+    "# 1. Final Portfolio Value: Multiply the period values to get the overall growth factor\n",
+    "combined_final_value = np.prod(df['Final Portfolio Value'])\n",
+    "\n",
+    "# 2. Annualized Sharpe Ratio: (Approximation) Compute the simple average\n",
+    "combined_sharpe = df['Annualized Sharpe'].mean()\n",
+    "\n",
+    "# 3. Maximum Drawdown: (Approximation) Use the worst (most negative) drawdown among the periods\n",
+    "combined_drawdown = df['Max Drawdown'].min()\n",
+    "\n",
+    "# 4. Win Rate: (Approximation) Average the win rates (assuming equal weights)\n",
+    "combined_win_rate = df['Win Rate'].mean()\n",
+    "\n",
+    "# --- Calculate Annualized Return ---\n",
+    "# The combined_final_value represents the cumulative growth factor over 28 days.\n",
+    "trading_days_year = 252\n",
+    "total_period_days = 28  # 4 periods * 7 days each\n",
+    "annualization_factor = trading_days_year / total_period_days\n",
+    "annualized_return = combined_final_value ** annualization_factor - 1\n",
+    "\n",
+    "# --- Display the Aggregated Results ---\n",
+    "print('\\nCombined Period Statistics:')\n",
+    "print('Combined Final Portfolio Value:', combined_final_value)\n",
+    "print('Combined Annualized Sharpe Ratio:', combined_sharpe)\n",
+    "print('Combined Maximum Drawdown:', combined_drawdown)\n",
+    "print('Combined Win Rate (%):', combined_win_rate)\n",
+    "print('Annualized Return (%):', annualized_return * 100)\n",
+    "\n"
    ],
    "outputs": [
     {
@@ -94,11 +139,23 @@
       "Combined Final Portfolio Value: 1.150190165435922\n",
       "Combined Annualized Sharpe Ratio: 3.4216249999999997\n",
       "Combined Maximum Drawdown: -8.03\n",
-      "Combined Win Rate (%): 51.3825\n"
+      "Input Period Statistics:\n",
+      "     Period  Final Portfolio Value  Annualized Sharpe  Max Drawdown  Win Rate\n",
+      "0  Period 1                 1.0405             3.8331         -6.76     53.01\n",
+      "1  Period 2                 1.0519             4.6799         -3.73     51.53\n",
+      "2  Period 3                 1.0324             3.1739         -8.03     51.34\n",
+      "3  Period 4                 1.0179             1.9996         -7.39     49.65\n",
+      "\n",
+      "Combined Period Statistics:\n",
+      "Combined Final Portfolio Value: 1.150190165435922\n",
+      "Combined Annualized Sharpe Ratio: 3.4216249999999997\n",
+      "Combined Maximum Drawdown: -8.03\n",
+      "Combined Win Rate (%): 51.3825\n",
+      "Annualized Return (%): 252.31152399862867\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 4
   }
  ],
  "metadata": {
