Updated Portfolio Stats

--- a/portfolio/combine_stats.ipynb
+++ b/portfolio/combine_stats.ipynb
@@ -30,6 +30,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "input_stats",
    "metadata": {
     "ExecuteTime": {
@@ -37,55 +38,38 @@
      "start_time": "2025-04-04T08:47:30.022472Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Period Statistics:\n",
+      "     Period  Final Portfolio Value  Annualized Sharpe  Max Drawdown  Win Rate\n",
+      "0  Period 1                 1.0403             3.8151         -6.77     53.01\n",
+      "1  Period 2                 1.0520             4.6947         -3.72     51.53\n",
+      "2  Period 3                 1.0326             3.1946         -8.01     51.43\n",
+      "3  Period 4                 1.0196             2.1642         -7.40     49.82\n",
+      "\n",
+      "Combined Period Statistics:\n",
+      "Combined Final Portfolio Value: 1.1522223253325763\n",
+      "Combined Annualized Sharpe Ratio: 3.46715\n",
+      "Combined Maximum Drawdown: -8.01\n",
+      "Combined Win Rate (%): 51.4475\n",
+      "Annualized Return (%): 257.95346629257716\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# --- Input: Summary statistics for each period ---\n",
-    "# Create a DataFrame where each row represents a period (e.g., 7 days)\n",
-    "# Replace the sample data with your actual statistics\n",
-    "data = {\n",
-    "    'Period': ['Period 1', 'Period 2', 'Period 3', 'Period 4'],\n",
-    "    'Final Portfolio Value': [1.0405, 1.0519, 1.0324, 1.0179],\n",
-    "    'Annualized Sharpe': [3.8331, 4.6799, 3.1739, 1.9996],\n",
-    "    'Max Drawdown': [-6.76, -3.73, -8.03, -7.39],\n",
-    "    'Win Rate': [53.01, 51.53, 51.34, 49.65]\n",
-    "}\n",
-    "\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "print('Input Period Statistics:')\n",
-    "print(df)\n",
-    "\n",
-    "# --- Aggregating the Statistics ---\n",
-    "\n",
-    "# 1. Final Portfolio Value: Multiply the period values to get the overall growth factor\n",
-    "combined_final_value = np.prod(df['Final Portfolio Value'])\n",
-    "\n",
-    "# 2. Annualized Sharpe Ratio: (Approximation) Compute the simple average\n",
-    "combined_sharpe = df['Annualized Sharpe'].mean()\n",
-    "\n",
-    "# 3. Maximum Drawdown: (Approximation) Use the worst (most negative) drawdown among the periods\n",
-    "combined_drawdown = df['Max Drawdown'].min()\n",
-    "\n",
-    "# 4. Win Rate: (Approximation) Average the win rates (assuming equal weights)\n",
-    "combined_win_rate = df['Win Rate'].mean()\n",
-    "\n",
-    "# --- Display the Aggregated Results ---\n",
-    "print('\\nCombined Period Statistics:')\n",
-    "print('Combined Final Portfolio Value:', combined_final_value)\n",
-    "print('Combined Annualized Sharpe Ratio:', combined_sharpe)\n",
-    "print('Combined Maximum Drawdown:', combined_drawdown)\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "# --- Input: Summary statistics for each period ---\n",
     "data = {\n",
     "    'Period': ['Period 1', 'Period 2', 'Period 3', 'Period 4'],\n",
-    "    'Final Portfolio Value': [1.0405, 1.0519, 1.0324, 1.0179],\n",
-    "    'Annualized Sharpe': [3.8331, 4.6799, 3.1739, 1.9996],\n",
-    "    'Max Drawdown': [-6.76, -3.73, -8.03, -7.39],\n",
-    "    'Win Rate': [53.01, 51.53, 51.34, 49.65]\n",
+    "    'Final Portfolio Value': [1.0403, 1.0520, 1.0326, 1.0196],\n",
+    "    'Annualized Sharpe': [3.8151, 4.6947, 3.1946, 2.1642],\n",
+    "    'Max Drawdown': [-6.77, -3.72, -8.01, -7.40],\n",
+    "    'Win Rate': [53.01, 51.53, 51.43, 49.82]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
@@ -122,51 +106,26 @@
     "print('Combined Win Rate (%):', combined_win_rate)\n",
     "print('Annualized Return (%):', annualized_return * 100)\n",
     "\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Period Statistics:\n",
-      "     Period  Final Portfolio Value  Annualized Sharpe  Max Drawdown  Win Rate\n",
-      "0  Period 1                 1.0405             3.8331         -6.76     53.01\n",
-      "1  Period 2                 1.0519             4.6799         -3.73     51.53\n",
-      "2  Period 3                 1.0324             3.1739         -8.03     51.34\n",
-      "3  Period 4                 1.0179             1.9996         -7.39     49.65\n",
-      "\n",
-      "Combined Period Statistics:\n",
-      "Combined Final Portfolio Value: 1.150190165435922\n",
-      "Combined Annualized Sharpe Ratio: 3.4216249999999997\n",
-      "Combined Maximum Drawdown: -8.03\n",
-      "Input Period Statistics:\n",
-      "     Period  Final Portfolio Value  Annualized Sharpe  Max Drawdown  Win Rate\n",
-      "0  Period 1                 1.0405             3.8331         -6.76     53.01\n",
-      "1  Period 2                 1.0519             4.6799         -3.73     51.53\n",
-      "2  Period 3                 1.0324             3.1739         -8.03     51.34\n",
-      "3  Period 4                 1.0179             1.9996         -7.39     49.65\n",
-      "\n",
-      "Combined Period Statistics:\n",
-      "Combined Final Portfolio Value: 1.150190165435922\n",
-      "Combined Annualized Sharpe Ratio: 3.4216249999999997\n",
-      "Combined Maximum Drawdown: -8.03\n",
-      "Combined Win Rate (%): 51.3825\n",
-      "Annualized Return (%): 252.31152399862867\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.x"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
